Minor CSS revisions

--- a/src/index.scss
+++ b/src/index.scss
@@ -97,10 +97,13 @@ p {
 
 .link {
   text-align: center;
+  margin-bottom: 0.5rem;
 }
 
 h3 {
   text-align: center;
+  color: white;
+  text-shadow: hsl(300, 100%, 10%) 0.1rem 0.1rem;
 }
 
 form {
