Minor CSS changes

--- a/src/index.scss
+++ b/src/index.scss
@@ -28,7 +28,7 @@ header {
 }
 
 h1 {
-  color: hsla(350, 100%, 83%);
+  color: white;
   text-shadow: hsl(350, 100%, 13%) 0.1rem 0.1rem;
   margin-top: 0;
   padding-top: 0.3rem;
@@ -83,10 +83,10 @@ p {
     0 -0.09rem black;
 }
 p a {
-  color: black;
+  color: white;
 }
 p a:visited {
-  color: black;
+  color: white;
 }
 
 p.link {
