--- a/src/index.scss
+++ b/src/index.scss
@@ -134,7 +134,7 @@ h2 {
   border-top-color: hsl(16, 93%, 33%);
   border-left-color: hsl(16, 93%, 33%);
   border-right-color: hsl(16, 93%, 66%);
-  border-bottom-color: hsl(16, 793, 66%);
+  border-bottom-color: hsl(16, 93%, 66%);
   max-width: fit-content;
   line-height: 1.5rem;
 }
