--- a/src/index.scss
+++ b/src/index.scss
@@ -114,7 +114,7 @@ p.link {
   border-top-color: hsl(16, 93%, 33%);
   border-left-color: hsl(16, 93%, 33%);
   border-right-color: hsl(16, 93%, 66%);
-  border-bottom-color: hsl(16, 793, 66%);
+  border-bottom-color: hsl(16, 93%, 66%);
   line-height: 1rem;
 }
 
